soe sdk demo修改